--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         android:theme="@style/AppTheme">
 
         <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="9fbcf46a17338c0ed7859bc5de7a96c85313f88d" />
+
+        <meta-data
             android:name="BUG_HD_SDK_GENERAL_KEY"
             android:value="6a26acee7cf272cb9a514bda6050e49b" />
 
