--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
         jcenter()
 
         maven { url 'https://maven.fabric.io/public' }
+        maven { url "http://mvn.leancloud.cn/nexus/content/repositories/releases" }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
@@ -21,6 +23,7 @@ allprojects {
 
         maven { url "http://maven.bughd.com/public" }//关于fir
         maven { url 'https://maven.fabric.io/public' }//fabric
+        maven { url "http://mvn.leancloud.cn/nexus/content/repositories/releases" }
     }
 }
 
