登录与注册

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     //FIR依赖
-    compile 'im.fir:fir-sdk:latest.integration@aar'
     //jackson依赖
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-pcollections:2.7.2'
     //fabric
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
@@ -47,22 +45,31 @@ dependencies {
     compile files('libs/jackson-annotations-2.7.0.jar')//自动生成
     compile files('libs/jackson-databind-2.4.5.jar')
 
-    compile 'org.greenrobot:eventbus:3.0.0'  //导入
-    compile 'com.jakewharton:butterknife:7.0.1'//导入
+    //eventbus
+    //butterknife
 
     //avoscloud-sdk 为 LeanCloud基础包
-    compile 'cn.leancloud.android:avoscloud-sdk:v3.+'
     //二维码
-    compile 'me.dm7.barcodescanner:zbar:1.8.4'
+    // pubnub
     compile project(':agora')
-    compile 'com.android.support:appcompat-v7:23.2.0'
 
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:support-v4:23.2.0'
+    compile 'im.fir:fir-sdk:latest.integration@aar'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-pcollections:2.7.2'
     compile 'com.marvinlabs:android-intents:1.5.1@aar'
     compile 'cn.trinea.android.common:trinea-android-common:4.2.15'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'cn.leancloud.android:avoscloud-sdk:v3.+'
+    compile 'me.dm7.barcodescanner:zbar:1.8.4'
+    compile 'com.pubnub:pubnub-android:3.7.6'
+    compile 'com.android.support:design:23.2.0'
 
-
-
-    compile 'com.android.support:support-v4:23.2.0'
+    // design
+    compile 'com.android.support:design:23.2.0'
+    // validation
+    compile 'com.mobsandgeeks:android-saripaar:2.0.3'
 }
 
 
